force-app/main/default/objects/Flex_Assignment__c/Flex_Assignment__c.object-meta.xml
<CustomObject>
    <label>Flex Assignment</label>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flex Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>