force-app/main/default/objects/Flex_Assignment__c/fields/Assignment_Field__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Field__c</fullName>
    <label>Assignment Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Assignment_Field_Names</valueSetName>
    </valueSet>
</CustomField>