force-app/main/default/objects/Flex_Assignment__c/fields/Assignment_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Field_Name__c</fullName>
    <label>Assignment Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>