force-app/main/default/objects/Flex_Assignment__c/fields/Clone_Link__c.field-meta.xml
<CustomField>
    <fullName>Clone_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &quot;/lightning/r/Flex_Assignment__c/&quot;  + Id + &quot;/clone?useRecordTypeCheck=1&amp;backgroundContext=%2Flightning%2Fr%2FFlex_Assignment__c%2F&quot; +  Id + &quot;%2Fview&amp;count=1&quot; + Id, &quot;Clone Record&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone Link</label>
    <type>Text</type>
</CustomField>