force-app/main/default/objects/Flex_Assignment__c/fields/Opportunity_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Role__c</fullName>
    <label>Opportunity Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>