force-app/main/default/objects/Flex_Assignment__c/fields/Program_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program of Interest</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Academic Program</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vocational Program</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Manual_Territory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>