force-app/main/default/objects/Flex_Assignment__c/fields/Student_with_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Student_with_Special_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student with Special Needs</label>
    <type>Checkbox</type>
</CustomField>