force-app/main/default/objects/Flex_Assignment__c/fields/Team_Color__c.field-meta.xml
<CustomField>
    <fullName>Team_Color__c</fullName>
    <label>Team Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Colors</valueSetName>
    </valueSet>
</CustomField>