force-app/main/default/objects/Flex_Assignment__c/fields/Test_SFDX_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_SFDX_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Test_SFDX_Field__c</label>
    <type>Checkbox</type>
</CustomField>