force-app/main/default/objects/Flex_Assignment__c/fields/User_Assigned_to_Territory__c.field-meta.xml
<CustomField>
    <fullName>User_Assigned_to_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manual_Territory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>