force-app/main/default/objects/Flex_Assignment__c/fields/User_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>User_Name_Text__c</fullName>
    <formula>User_Assigned_to_Territory__r.FirstName + &quot; &quot; +  User_Assigned_to_Territory__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name - Text</label>
    <type>Text</type>
</CustomField>