force-app/main/default/objects/Flex_Assignment__c/validationRules/Opp_Duplicate_Team_Color_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Duplicate_Team_Color_Assignment</fullName>
    <active>true</active>
    <errorConditionFormula>Duplicate_Found__c = TRUE</errorConditionFormula>
    <errorMessage>A duplicate user was found for this Team Color.</errorMessage>
</ValidationRule>