force-app/main/default/objects/Flex_Assignment__c/listViews/All_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Assignments</fullName>
    <columns>Object_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Assignment_Field_Name__c</columns>
    <columns>Program_of_Interest__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Student_with_Special_Needs__c</columns>
    <columns>Preferred_Language__c</columns>
    <columns>Team_Color__c</columns>
    <columns>User_Assigned_to_Territory__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>