force-app/main/default/objects/Flex_Assignment__c/listViews/All_Lead_Assignments.listView-meta.xml
<ListView>
    <fullName>All_Lead_Assignments</fullName>
    <columns>Priority__c</columns>
    <columns>Assignment_Field__c</columns>
    <columns>Program_of_Interest__c</columns>
    <columns>Zip_Code__c</columns>
    <columns>Student_with_Special_Needs__c</columns>
    <columns>Preferred_Language__c</columns>
    <columns>Team_Color__c</columns>
    <columns>User_Assigned_to_Territory__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Lead</label>
</ListView>