force-app/main/default/objects/Flex_Assignment__c/listViews/Contact.listView-meta.xml
<ListView>
    <fullName>Contact</fullName>
    <columns>Priority__c</columns>
    <columns>Assignment_Field_Name__c</columns>
    <columns>Team_Color__c</columns>
    <columns>User_Assigned_to_Territory__c</columns>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Contact</value>
    </filters>
    <label>Contact</label>
</ListView>