force-app/main/default/objects/Flex_Assignment__c/listViews/Opportunity.listView-meta.xml
<ListView>
    <fullName>Opportunity</fullName>
    <columns>Priority__c</columns>
    <columns>Assignment_Field_Name__c</columns>
    <columns>Opportunity_Team_Role__c</columns>
    <columns>Team_Color__c</columns>
    <columns>User_Assigned_to_Territory__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Clone_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity</label>
</ListView>